--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/DWMi/Distort#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.1"
   }
